braillestudio oefeningen.txt

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <ul>
       <li>
         <a href="./pages/words/">
-          Woorden oefenen
+          Letter en Woorden oefenen
         </a>
       </li>
 
