--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <ul>
       <li>
-        <a href="./pages/words/">
+        <a href="./pages/words.html/">
           Letter en Woorden oefenen
         </a>
       </li>
