--- a/pages/words.html
+++ b/pages/words.html
@@ -291,6 +291,10 @@
       <div id="brailleMonitorComponent"></div>
     </div>
 
+ <p class="field-value" id="activity-instruction">–</p>
+
+
+
     <div class="meta-bar">
       <span id="item-id">ID: –</span>
       <span id="item-index">0 / 0</span>
@@ -302,9 +306,10 @@
       <span id="activity-index">0 / 0</span>
       <span id="activity-id">Activity: –</span>
     </div>
+    
     <div id="activity-buttons" class="buttons" style="justify-content:flex-start; margin-top: 10px;"></div>
 
-    <p class="field-label" id="activity-instruction-label">Instructie</p>
+
     <p class="field-value" id="activity-instruction">–</p>
 
     <div class="meta-bar" style="margin-top: 12px;">
