--- a/pages/words.html
+++ b/pages/words.html
@@ -49,7 +49,7 @@
           Auto next
         </label>
         <button id="start-activity-btn" class="secondary" type="button">Start</button>
-        <button id="done-activity-btn" type="button" disabled>Done</button>
+        <button id="done-activity-btn" type="button" disabled>Stop</button>
       </span>
     </div>
 
