--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <ul>
       <li>
-        <a href="./pages/activity-runner.html">
+        <a href="./pages/words.html">
           Letter en woorden oefenen
         </a>
       </li>
