--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </li>
 
       <li>
-        <a href="./pages/stories/">
+        <a href="./pages/stories.html">
           Verhalen lezen
         </a>
       </li>
